--- a/style.css
+++ b/style.css
@@ -1,140 +1,442 @@
-
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 *,
 *::after,
 *::before {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+   -webkit-box-sizing: inherit;
+   box-sizing: inherit;
 }
 
-ul,
-ol {
-  padding: 0;
+ul {
+   padding: 0;
 }
 
 body,
 h1,
 h2,
-h3,
-h4,
-h5,
-h6,
 p,
 ul,
-ol,
-li,
-blockquote {
-  margin: 0;
+li {
+   margin: 0;
 }
 
 ul {
-  list-style: none;
+   list-style: none;
 }
 
 img {
-  max-width: 100%;
-  display: block;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-}
-
-textarea,
-select {
-  cursor: text;
-}
-
-textarea {
-  resize: vertical;
-}
-
-button {
-  cursor: pointer;
-  outline: transparent;
+   max-width: 100%;
+   display: block;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
-  font: inherit;
+   text-decoration: none;
+   color: inherit;
+   font: inherit;
 }
 
 address {
-  font: inherit;
+   font: inherit;
 }
 
 html,
 body {
-  height: 100%;
+   height: 100%;
 }
 
 body {
-  font-weight: 300;
-  line-height: calc(21 / 18);
-  letter-spacing: 1px;
-  font-style: normal;
-  color: black;
-  /* font-family: "RobotoCondensed"; */
-  background-color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-width: 320px;
-  overflow-x: hidden;
-  position: relative;
-}
-
-body .hidden {
-  overflow: hidden;
+   font-size: 18px;
+   font-weight: 300;
+   line-height: calc(21 / 18);
+   letter-spacing: 1px;
+   font-style: normal;
+   color: black;
+   font-family: 'Roboto', sans-serif;
+   background-color: white;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
+   flex-direction: column;
+   min-width: 320px;
 }
 
 .main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+   -webkit-box-flex: 1;
+   -ms-flex-positive: 1;
+   flex-grow: 1;
 }
 
 .container {
-  max-width: 1230px;
-  width: 100%;
-  margin: 0 auto;
+   max-width: 1230px;
+   width: 100%;
+   margin: 0 auto;
 }
 
 @media (max-width: 1230px) {
-  .container {
-    padding-right: calc(10px + 5 * ((100vw - 320px) / (1600)));
-  }
+   .container {
+      padding-right: calc(10px + 5 * ((100vw - 320px) / (1600)));
+   }
 }
 
 @media (min-width: 1230px) {
-  .container {
-    padding-right: calc(10px + 5 * ((100vw - 320px) / (910)));
-  }
+   .container {
+      padding-right: calc(10px + 5 * ((100vw - 320px) / (910)));
+   }
 }
 
 @media (max-width: 1230px) {
-  .container {
-    padding-left: calc(10px + 5 * ((100vw - 320px) / (1600)));
-  }
+   .container {
+      padding-left: calc(10px + 5 * ((100vw - 320px) / (1600)));
+   }
 }
 
 @media (min-width: 1230px) {
-  .container {
-    padding-left: calc(10px + 5 * ((100vw - 320px) / (910)));
-  }
+   .container {
+      padding-left: calc(10px + 5 * ((100vw - 320px) / (910)));
+   }
+}
+
+.sr-only {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   white-space: nowrap;
+   -webkit-clip-path: inset(100%);
+   clip-path: inset(100%);
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+}
+
+.section {
+   width: 30%;
+}
+
+@media (max-width: 1230px) {
+
+   .section,
+   .about {
+      padding-top: calc(20px + 15 * ((100vw - 320px) / (1600)));
+   }
+}
+
+@media (min-width: 1230px) {
+
+   .section,
+   .about {
+      padding-top: calc(20px + 15 * ((100vw - 320px) / (910)));
+   }
+}
+
+@media (max-width: 1230px) {
+
+   .section,
+   .about {
+      padding-bottom: calc(20px + 15 * ((100vw - 320px) / (1600)));
+   }
+}
+
+@media (min-width: 1230px) {
+
+   .section,
+   .about {
+      padding-bottom: calc(20px + 15 * ((100vw - 320px) / (910)));
+   }
+}
+
+.image {
+   position: absolute;
+   -o-object-fit: cover;
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   left: 0;
+   top: 0;
+}
+
+.image__box {
+   position: relative;
+   -webkit-transition: -webkit-transform 0.5s ease;
+   transition: -webkit-transform 0.5s ease;
+   transition: transform 0.5s ease;
+   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+}
+
+.image__box:hover {
+   -webkit-transform: scale(0.95);
+   transform: scale(0.95);
+}
+
+.section__title {
+   text-align: left;
+   font-weight: 700;
+   color: #e2ab3f;
+   text-transform: capitalize;
+   font-style: italic;
+}
+
+@media (max-width: 1230px) {
+   .section__title {
+      line-height: calc(1.2 + 0.13 * ((100vw - 320px) / (1600)));
+   }
+}
+
+@media (min-width: 1230px) {
+   .section__title {
+      line-height: calc(1.2 + 0.13 * ((100vw - 320px) / (910)));
+   }
+}
+
+@media (max-width: 1230px) {
+   .section__title {
+      margin-bottom: calc(20px + 20 * ((100vw - 320px) / (1600)));
+   }
+}
+
+@media (min-width: 1230px) {
+   .section__title {
+      margin-bottom: calc(20px + 20 * ((100vw - 320px) / (910)));
+   }
+}
+
+.section__text {
+   font-weight: 300;
+}
+
+.site__link {
+   font-weight: 500;
+   text-decoration: underline;
+   text-decoration-color: transparent;
+   transition: all 0.5s ease;
+}
+
+.site__link:hover {
+   color: #e2ab3f;
+   text-decoration-color: #e2ab3f;
+}
+
+.header__top {
+   padding: 15px;
+   background-color: #e2ab3f;
+}
+
+.menu__list {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   column-gap: 20px;
+   row-gap: 10px;
+   flex-wrap: wrap;
+}
+
+.menu__link {
+   text-decoration: underline;
+   text-decoration-color: transparent;
+   transition: all 0.5s ease;
+   color: #fff;
+}
+
+.menu__link:hover {
+   color: #000;
+   text-decoration-color: #000;
+}
+
+.menu__name {
+   font-weight: 500;
+   text-transform: capitalize;
+   margin-right: 3px;
+   display: inherit;
+}
+
+.menu__name::after {
+   content: ":";
+}
+
+.menu__text {
+   font-weight: 300;
+}
+
+.header__content {
+   display: flex;
+   gap: 30px;
+   align-items: center;
+   justify-content: space-around;
+   margin-top: 50px;
+   margin-bottom: 50px;
+}
+
+.header__title {
+   color: #e2ab3f;
+   font-weight: 900;
+   width: 40%;
+   font-size: 60px;
+}
+
+.header__image-box {
+   width: 400px;
+   height: 400px;
+}
+
+.image {
+   border-radius: 50%;
+   border: 10px solid #e2ab3f;
+}
+
+.about__text:not(:last-child) {
+   margin-bottom: 10px;
+   text-align: justify;
+}
+
+.main__body {
+   display: flex;
+   gap: 20px;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+.skills__list {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 10px;
+   list-style: disc;
+   padding-left: 15px;
+}
+
+.code__text {
+   font-size: 16px;
+}
+
+.education__list {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 15px;
+}
+
+.education__name {
+   font-weight: 600;
+   margin-bottom: 15px;
+   display: inherit;
+}
+
+.education__small-list {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 10px;
+   list-style: circle;
+   padding-left: 15px;
+}
+
+.languages__list {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 10px;
+   list-style: disc;
+   padding-left: 15px;
+}
+
+.languages__name {
+   margin-right: 3px;
+   font-weight: 500;
+}
+
+.languages__name::after {
+   content: ":";
+}
+
+.footer {
+   background-color: #e2ab3f;
+   padding: 20px;
+}
+
+.footer__text {
+   text-align: center;
+   color: #fff;
+}
+
+@media (max-width: 1070.98px) {
+
+   .skills,
+   .education {
+      width: 45%;
+   }
+
+   .header__content {
+      margin-bottom: 30px;
+   }
+}
+
+@media (max-width: 790.98px) {
+   .section {
+      width: 45%;
+   }
+
+   .skills,
+   .education,
+   .projects {
+      width: 100%;
+   }
+
+   .header__image-box {
+      width: 280px;
+      height: 280px;
+   }
+
+   .header__title {
+      font-size: 42px;
+   }
+}
+
+@media (max-width: 575.98px) {
+   .section {
+      width: 100%;
+   }
+
+   .header__image-box {
+      width: 200px;
+      height: 200px;
+   }
+
+   .header__title {
+      font-size: 36px;
+   }
+}
+
+@media (max-width: 490.98px) {
+   .header__image-box {
+      width: 150px;
+      height: 150px;
+   }
+}
+
+@media (max-width: 400.98px) {
+   .header__content {
+      gap: 20px;
+      flex-direction: column;
+   }
+
+   .header__title {
+      text-align: center;
+      width: 100%;
+   }
+
+   .header__image-box {
+      width: 200px;
+      height: 200px;
+   }
+
+   .menu__list {
+      font-size: 13px;
+   }
 }
