--- a/Plants/css/style.css
+++ b/Plants/css/style.css
@@ -380,6 +380,7 @@ blockquote {
 
 .header__top {
   padding: 46px 0;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -632,6 +633,10 @@ blockquote {
   }
 }
 
+.content {
+  padding-top: 134px;
+}
+
 .content__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -688,12 +693,40 @@ blockquote {
   width: calc(449/1220*100%);
 }
 
+@media (max-width: 767.98px) {
+  .content__item--img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+@media (max-width: 597.98px) {
+  .content__item--img {
+    display: none;
+  }
+}
+
 .content__item--text {
   width: calc(549/1220*100%);
 }
 
 .content__item--text *:last-child {
   margin-bottom: 0;
+}
+
+@media (max-width: 767.98px) {
+  .content__item--text {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
+
+@media (max-width: 597.98px) {
+  .content__item--text {
+    width: 100%;
+  }
 }
 
 .content__img-box {
@@ -715,7 +748,6 @@ blockquote {
 }
 
 .content__btn {
-  margin-top: calc((48 / 20) * 1em);
   width: 158px;
   height: 44px;
   border-radius: 10px;
@@ -793,6 +825,18 @@ blockquote {
   }
 }
 
+@media (max-width: 767.98px) {
+  .about__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .about__item {
   height: 100%;
 }
@@ -805,12 +849,33 @@ blockquote {
   width: calc(605/1220*100%);
 }
 
+@media (max-width: 767.98px) {
+  .about__item--text {
+    width: 100%;
+  }
+}
+
 .about__img-box {
   padding-bottom: 102.33%;
 }
 
 .about__title {
   margin-bottom: calc((40 / 40) * 1em);
+}
+
+@media (max-width: 767.98px) {
+  .about__title {
+    width: calc(423/768*100%);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 597.98px) {
+  .about__title {
+    width: 100%;
+  }
 }
 
 .service {
@@ -876,8 +941,21 @@ blockquote {
   }
 }
 
+@media (max-width: 767.98px) {
+  .service__top {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .service__title {
   max-width: 306px;
+}
+
+@media (max-width: 767.98px) {
+  .service__title {
+    margin-bottom: 40px;
+  }
 }
 
 .service__list {
@@ -891,15 +969,20 @@ blockquote {
 
 @media (max-width: 1250px) {
   .service__list {
-    -webkit-column-gap: calc(20px + 18 * ((100vw - 320px) / (1600)));
-            column-gap: calc(20px + 18 * ((100vw - 320px) / (1600)));
+    gap: calc(20px + 18 * ((100vw - 320px) / (1600)));
   }
 }
 
 @media (min-width: 1250px) {
   .service__list {
-    -webkit-column-gap: calc(20px + 18 * ((100vw - 320px) / (930)));
-            column-gap: calc(20px + 18 * ((100vw - 320px) / (930)));
+    gap: calc(20px + 18 * ((100vw - 320px) / (930)));
+  }
+}
+
+@media (max-width: 597.98px) {
+  .service__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
@@ -912,8 +995,8 @@ blockquote {
 .service__list-btn {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(330px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  -ms-grid-columns: (minmax(230px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
 }
 
 @media (max-width: 1250px) {
@@ -1028,8 +1111,25 @@ blockquote {
   }
 }
 
+@media (max-width: 597.98px) {
+  .prices__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .prices__item {
   width: calc(332/1220*100%);
+}
+
+@media (max-width: 597.98px) {
+  .prices__item {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .prices__item:last-child {
@@ -1055,6 +1155,27 @@ blockquote {
   margin-bottom: calc((38 / 40) * 1em);
 }
 
+@media (max-width: 767.98px) {
+  .prices__item:last-child .prices__title {
+    font-size: 25px;
+    line-height: calc(35/25);
+    margin-top: 90px;
+  }
+}
+
+@media (max-width: 597.98px) {
+  .prices__item:last-child .prices__title {
+    text-align: center;
+    margin: 40px auto;
+  }
+}
+
+@media (max-width: 597.98px) {
+  .prices__item:last-child {
+    width: 100%;
+  }
+}
+
 .prices__title {
   margin-bottom: calc((60 / 40) * 1em);
 }
@@ -1077,9 +1198,21 @@ blockquote {
   }
 }
 
+@media (max-width: 597.98px) {
+  .prices__btn {
+    margin: 0 auto;
+  }
+}
+
 .prices__img-box {
   width: 152px;
   height: 175px;
+}
+
+@media (max-width: 597.98px) {
+  .prices__img-box {
+    display: none;
+  }
 }
 
 .accordion__list {
@@ -1095,6 +1228,8 @@ blockquote {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 20px;
+  padding-top: 34px;
+  padding-bottom: 34px;
   min-width: 270px;
 }
 
@@ -1110,27 +1245,12 @@ blockquote {
   }
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 597.98px) {
   .accordion__list {
-    padding-top: calc(10px + 24 * ((100vw - 320px) / (1600)));
-  }
-}
-
-@media (min-width: 1250px) {
-  .accordion__list {
-    padding-top: calc(10px + 24 * ((100vw - 320px) / (930)));
-  }
-}
-
-@media (max-width: 1250px) {
-  .accordion__list {
-    padding-bottom: calc(10px + 24 * ((100vw - 320px) / (1600)));
-  }
-}
-
-@media (min-width: 1250px) {
-  .accordion__list {
-    padding-bottom: calc(10px + 24 * ((100vw - 320px) / (930)));
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 0 auto;
   }
 }
 
@@ -1190,34 +1310,12 @@ blockquote {
 }
 
 .accordion__title-btn {
+  padding-right: 40px;
+  padding-left: 40px;
   background: #EDF2EC;
   height: 50px;
   border-radius: 20px;
   width: 250px;
-}
-
-@media (max-width: 1250px) {
-  .accordion__title-btn {
-    padding-right: calc(10px + 30 * ((100vw - 320px) / (1600)));
-  }
-}
-
-@media (min-width: 1250px) {
-  .accordion__title-btn {
-    padding-right: calc(10px + 30 * ((100vw - 320px) / (930)));
-  }
-}
-
-@media (max-width: 1250px) {
-  .accordion__title-btn {
-    padding-left: calc(10px + 30 * ((100vw - 320px) / (1600)));
-  }
-}
-
-@media (min-width: 1250px) {
-  .accordion__title-btn {
-    padding-left: calc(10px + 30 * ((100vw - 320px) / (930)));
-  }
 }
 
 .accordion__name {
@@ -1411,6 +1509,22 @@ blockquote {
   }
 }
 
+@media (max-width: 767.98px) {
+  .contact__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 0;
+  }
+}
+
 .contact__item--img {
   width: calc(400/1220*100%);
 }
@@ -1420,9 +1534,15 @@ blockquote {
 }
 
 @media (max-width: 767.98px) {
+  .contact__item--text {
+    margin-left: inherit;
+  }
+}
+
+@media (max-width: 767.98px) {
   .contact__img-box {
     background-image: none !important;
-    padding-bottom: 40.806%;
+    padding-bottom: 129%;
     position: relative;
     -webkit-transition: -webkit-transform 0.5s ease;
     transition: -webkit-transform 0.5s ease;
@@ -1474,8 +1594,15 @@ blockquote {
   height: 315px;
 }
 
+@media (max-width: 597.98px) {
+  .contact__box-content {
+    width: 90vw;
+  }
+}
+
 .select__form {
-  width: 450px;
+  width: 100%;
+  z-index: 4;
 }
 
 .jq-selectbox__select {
@@ -1495,6 +1622,10 @@ blockquote {
   border: 1px solid #D6E7D2;
   color: #717171;
   padding-left: 35px;
+}
+
+.jq-selectbox__select-text {
+  width: auto !important;
 }
 
 .jq-selectbox__trigger {
@@ -1549,6 +1680,7 @@ blockquote {
   font-weight: 400;
   line-height: 40px;
   letter-spacing: 0.05em;
+  width: 100%;
 }
 
 .jq-selectbox li {
@@ -1695,6 +1827,18 @@ blockquote {
 @media (min-width: 1250px) {
   .footer__list {
     gap: calc(20px + 10 * ((100vw - 320px) / (930)));
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
