--- a/Plants/scss/_about.scss
+++ b/Plants/scss/_about.scss
@@ -9,6 +9,11 @@
       @include gap-all-adopt(30, 20, 1);
       @include p-adopt(63, 30, 1);
       @include p-adopt(63, 30, 3);
+
+      @media (max-width: $md3) {
+         flex-direction: column;
+         justify-content: center;
+      }
    }
 
    &__item {
@@ -20,6 +25,10 @@
 
       &--text {
          width: calc(605/1220*100%);
+
+         @media (max-width: $md3) {
+            width: 100%;
+         }
       }
    }
 
@@ -29,5 +38,16 @@
 
    &__title {
       @include m-font(40, 40, 0);
+
+      @media (max-width: $md3) {
+         width: calc(423/768*100%);
+         text-align: center;
+         margin-left: auto;
+         margin-right: auto;
+      }
+
+      @media (max-width: $md6) {
+         width: 100%;
+      }
    }
 }
