--- a/Plants/scss/_contact.scss
+++ b/Plants/scss/_contact.scss
@@ -11,6 +11,13 @@
       justify-content: space-between;
       gap: 10px;
       @include p-adopt(80, 45, 3);
+
+      @media (max-width: $md3) {
+         flex-direction: column-reverse;
+         justify-content: center;
+         align-items: center;
+         padding-bottom: 0;
+      }
    }
 
    &__item {
@@ -20,13 +27,17 @@
 
       &--text {
          margin-left: auto;
+
+         @media (max-width: $md3) {
+            margin-left: inherit;
+         }
       }
    }
 
    &__img-box {
       @media (max-width: $md3) {
          background-image: none !important;
-         padding-bottom: 40.806%;
+         padding-bottom: 129%;
          position: relative;
          transition: transform 0.5s ease;
 
@@ -74,12 +85,17 @@
       position: relative;
       width: 450px;
       height: 315px;
+
+      @media (max-width: $md6) {
+         width: 90vw;
+      }
    }
 }
 
 .select {
    &__form {
-      width: 450px;
+      width: 100%;
+      z-index:4;
    }
 }
 
@@ -102,6 +118,10 @@
          color: $color-gray;
          padding-left: 35px;
       }
+   }
+
+   &__select-text {
+      width: auto !important;
    }
 
    &__trigger {
@@ -147,6 +167,7 @@
       font-weight: 400;
       line-height: 40px;
       letter-spacing: 0.05em;
+      width: 100%;
    }
 
    li {
