--- a/Plants/scss/_service.scss
+++ b/Plants/scss/_service.scss
@@ -8,16 +8,28 @@
       @include m-adopt(90, 45, 3);
       display: flex;
       align-items: center;
+
+      @media (max-width: $md3) {
+         flex-wrap: wrap;
+      }
    }
 
    &__title {
       max-width: 306px;
+
+      @media (max-width: $md3) {
+        margin-bottom: 40px;
+      }
    }
 
    &__list {
       display: flex;
       align-items: center;
-      @include gap-all-adopt(38, 20, 2);
+      @include gap-all-adopt(38, 20, 1);
+
+       @media (max-width: $md6) {
+         flex-wrap: wrap;
+      }
    }
 
    &__btn {
@@ -30,12 +42,10 @@
       display: grid;
       @include gap-all-adopt(98, 20, 2);
       @include gap-all-adopt(55, 20, 3);
-      grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
    }
 
-   &__item-btn {
-   
-   }
+   &__item-btn {}
 
    &__img-box {
       padding-bottom: 106.065%;
